test/spec_vectors/f32/fail/module_10.wat
(module (func (result f32) (f32.sqrt (i64.const 0))))